--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script async defer src="src/index.js"></script>
+    <script async defer src="src/index.js" type="module"></script>
+   
     <title>Andrew Barker Portfolio</title>
   </head>
   <body>
